src/test/resources/public/input/typechecking/pass/pass05.jova
class ASDF2{
    private int var;
    public int getVar() {
        return this.var;
    }


    public int getThisVar() {
        return this.var;
    }

    public ASDF2 setVar(int var) {
        this.var = var;
        return this;
    }
}

class ASDF{
    private ASDF2 a;
    public ASDF2 getA() {
        return a;
    }


    public ASDF2 getThisA() {
        return this.a;
    }
}

class Evaluation{

  private int func1(){
    return 1;
  }

   public ASDF2 func1(ASDF a){
      return a.getThisA();
   }

   public ASDF2 func1(int a, int b, ASDF2 asdf){
      int x;
      x = a + b + asdf.getThisVar();
      return asdf.setVar(x + asdf.getVar());
   }

}

