src/test/resources/public/input/typechecking/fail/unknown_type/fail04.jova
class Test {

   public int func1(Onknown0 param, Onknown1 param){
     return 1;
   }
}
